# flutterCmakeTest

./: CMakeLists.txt  LICENSE  README.md  pubspec.yaml
lib/: btn1_page.dart  dash_board.dart  home_page.dart  main.dart  main_3.dart  my_ffi.dart  routers.dart
makeDll/: jicall.h  jictcp.cpp  jictcp.h  testDll.cpp
makeDll/test/: testMain.cpp
test/: dialog.dart  main_2.dart  main_auto.dart  main_bitsdo.dart  main_flex.dart  main_init.dart  main_state.dart  mian_list.dart  splash_screen.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
